--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ font-size: inherit;
                     </a>
 
 
-                    <a href="" target="_blank" class="footer_soc-link w-inline-block">
+                    <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
                       <div class="icon-1-5rem w-embed">
 
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px"
@@ -533,7 +533,7 @@ font-size: inherit;
 
             <div class="footer_soc-buttons" style="
             justify-content: center;
-        "><a href="#tg" target="_blank" class="footer_soc-link w-inline-block">
+        "><a href="https://t.me/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
 
 
                 <div class="icon-1-5rem w-embed">
@@ -547,7 +547,7 @@ font-size: inherit;
               </a>
 
 
-              <a href="https://#" target="_blank" class="footer_soc-link w-inline-block">
+              <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
                 <div class="icon-1-5rem w-embed">
 
                   <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px" height="50px">
@@ -573,12 +573,9 @@ font-size: inherit;
               </a>
             </div>
 
-            <a href="#download" class=" is-menu  downbot"><img src="down.png" style="
-        width: 175px;
-        margin: 20px auto;
-        display: block;
-    "></a>
+           
 
+            <a href="#download" class="button w-button">DOWNLOAD</a>
             <a href="#download" class="button w-button">LAUNCH DAPP</a>
           </div>
         </div>
@@ -1053,7 +1050,7 @@ font-size: inherit;
               </a>
 
 
-              <a href="https://#" target="_blank" class="footer_soc-link w-inline-block">
+              <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
                 <div class="icon-1-5rem w-embed">
 
                   <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px" height="50px">
