--- a/shushvpn.html
+++ b/shushvpn.html
@@ -374,7 +374,7 @@ a,
                   <a href="index.html#shushapp" class="nav_link">Shush App</a>
                   <a href="shushvpn.html" class="nav_link">Shush Extension</a>
 
-                  <div class="footer_soc-buttons"><a href="#tg" target="_blank" class="footer_soc-link w-inline-block">
+                  <div class="footer_soc-buttons"><a href="https://t.me/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
 
 
                       <div class="icon-1-5rem w-embed">
@@ -389,7 +389,7 @@ a,
                     </a>
 
 
-                    <a href="https://#" target="_blank" class="footer_soc-link w-inline-block">
+                    <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
                       <div class="icon-1-5rem w-embed">
 
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px"
@@ -418,9 +418,8 @@ a,
 
                 </div><a href="#download" class="downbot">
 
-                  <img src="down.png" style="
-    width: 175px;
-"> </a>
+                
+                <a href="#download" class="button w-button">DOWNLOAD</a>
                 <a href="#download" class="button w-button">LAUNCH DAPP</a>
 
 
