--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ font-size: inherit;
                 </div>
 
                 <a href="#download" class="button w-button">DOWNLOAD</a>
-                <a href="#download" class="button w-button">LAUNCH DAPP</a>
+                <a href="https://app.shushvpn.io/" class="button w-button">LAUNCH DAPP</a>
 
 
               </div><a data-w-id="4917e328-e08d-e20b-37f0-c22467abd7ee" href="index.html#"
