--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ font-size: inherit;
                     </a>
 
 
-                    <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
+                    <a href="https://x.com/ShushVPN" target="_blank" class="footer_soc-link w-inline-block">
                       <div class="icon-1-5rem w-embed">
 
                         <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px"
@@ -547,7 +547,7 @@ font-size: inherit;
               </a>
 
 
-              <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
+              <a href="https://x.com/ShushVPN" target="_blank" class="footer_soc-link w-inline-block">
                 <div class="icon-1-5rem w-embed">
 
                   <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px" height="50px">
@@ -1050,7 +1050,7 @@ font-size: inherit;
               </a>
 
 
-              <a href="https://x.com/ShushHub" target="_blank" class="footer_soc-link w-inline-block">
+              <a href="https://x.com/ShushVPN" target="_blank" class="footer_soc-link w-inline-block">
                 <div class="icon-1-5rem w-embed">
 
                   <svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" viewBox="0 0 50 50" width="50px" height="50px">
