--- a/shushvpn.html
+++ b/shushvpn.html
@@ -537,7 +537,7 @@ a,
                 <div class="solutions-hero_text animate">Shush is the groundbreaking Web3 browser extension that
                   integrates a crypto wallet, VPN, and AI2Earn model to enhance your browsing experience. By adding
                   Shush to your browser, you secure your online activities, reduce intrusive ads, and earn rewards
-                  through our innovative LayerAI economy. Enjoy a seamless, privacy-focused experience and get rewarded
+                  through our innovative ShushAi economy. Enjoy a seamless, privacy-focused experience and get rewarded
                   for your digital interactions.</div>
                 <div class="solutions-hero_lottie" data-w-id="2e968035-56c2-d815-ab87-0d360edd9845"
                   data-animation-type="lottie"
