--- a/shushvpn.html
+++ b/shushvpn.html
@@ -598,7 +598,7 @@ a,
                       
                       
                   <p id="w-node-_770bdce4-a473-ef2f-e52f-b2e339624557-2532544b" class="solutions_card_paragraph">Turn
-                    your browsing into a rewarding activity with Shush’s AI2Earn model. Accumulate DATUM points for
+                    your browsing into a rewarding activity with Shush’s AI2Earn model. Accumulate $SHH for
                     every action you take and benefit from our innovative rewards system.</p>
                 </div>
                 <div class="solutions_card">
